--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.host.url=http://localhost:9000
 sonar.sources=app,packages
 
 # Test roots (Pest/Feature + Unit tests inside packages)
-sonar.tests=tests,packages/Webkul/Admin/tests,packages/Webkul/Core/tests,packages/Webkul/DataGrid/tests,packages/Webkul/Shop/tests
+sonar.tests=tests,packages/**/tests
 
 sonar.sourceEncoding=UTF-8
 
@@ -18,8 +18,7 @@ sonar.php.file.suffixes=.php
 sonar.php.coverage.reportPaths=coverage.xml
 
 # Exclude non-source and compiled assets from analysis
-sonar.exclusions=vendor/**,node_modules/**,storage/**,public/**,bootstrap/**,database/**,routes/**,**/*.min.js,**/*.min.css,**/dist/**,resources/**
+sonar.exclusions=vendor/**,node_modules/**,storage/**,public/**,bootstrap/**,database/**,routes/**,resources/**,tests/**,packages/**/tests/**,packages/**/src/Resources/**,packages/**/**/lang/**,**/*.min.js,**/*.min.css,**/dist/**
 
 # Do not expect coverage for views and non-executable resources
-sonar.coverage.exclusions=resources/**,routes/**,database/**,public/**,bootstrap/**,lang/**,**/*.blade.php,packages/**/Resources/**
-
+sonar.coverage.exclusions=resources/**,routes/**,database/**,public/**,bootstrap/**,lang/**,**/*.blade.php,packages/**/src/Resources/**,packages/**/**/lang/**,tests/**,packages/**/tests/**
