--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.host.url=http://localhost:9000
 sonar.sources=app,packages
 
 # Test roots (Pest/Feature + Unit tests inside packages)
-sonar.tests=tests,packages/**/tests
+sonar.tests=tests,packages/Webkul/Admin/tests,packages/Webkul/Core/tests,packages/Webkul/DataGrid/tests,packages/Webkul/Shop/tests
 
 sonar.sourceEncoding=UTF-8
 
